Fix:_Adicionado_overflow-x:_hidden_para_corrigir_a_rolagem_horizontal

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 
 body, html {
     max-width: 100%;
-    
+    overflow-x: hidden;
 }
 
 /* CABEÇALHO E NAVEGAÇÃO */
